Stylesheet tweak to avoid long links to overflow the width of the list on small devices.

--- a/public/app.css
+++ b/public/app.css
@@ -7,7 +7,7 @@ h1 #date { font-weight: normal; font-size: 14px; }
 #feed-not-available { display: none; padding: 4px; font-style: italic; }
 .stale #feed-not-available { display: block; }
 #comments { list-style: none; padding: 0; margin: 0; border-bottom: solid #ccc 1px; }
-#comments li { border-top: solid #ccc 1px; padding: 4px; margin: 0; }
+#comments li { border-top: solid #ccc 1px; padding: 4px; margin: 0; width: 100%; overflow: hidden; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 #comments p { margin: 4px 0 0 0; }
 #comments li:nth-child(odd) { background: #eee; }
 #footer { font-size: 10px; padding: 4px; }
